# sbo-rabbitmq-sample

./: .dockerignore  Cargo.toml  Dockerfile.consumer  Dockerfile.producer  README.md  blog_post.md  jobs.yaml  service-bindings.yaml
src/: consumer.rs  producer.rs
